# assistant-rs

./: Cargo.toml  README.md
res/: config.toml
src/: args.rs  buffer.rs  config.rs  context.rs  error.rs  main.rs  metrics.rs  modes.rs  speech.rs  utils.rs
