[package]
name = "assistant-rs"
version = "0.1.0"
authors = ["ilan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deepspeech = {git = "https://github.com/RustAudio/deepspeech-rs", default-features=false, features = [ "dynamic"]}
cpal = "0.12"
serde = {version = "1.0", features=["derive"]}
toml = "0.5"
arpabet = "1.0"
crossbeam = "0.7"

[profile.release]
debug=true