[package]
name = "assistant-rs"
version = "0.1.0"
authors = ["ilan"]
edition = "2018"

[dependencies]
anyhow = "1.0"
deepspeech = {git = "https://github.com/RustAudio/deepspeech-rs", default-features=false, features = [ "dynamic"]}
cpal = "0.12"
serde = {version = "1.0", features=["derive"]}
toml = "0.5"
arpabet = "1.0"
crossbeam = "0.7"
thiserror = "1.0"
structopt = "0.3"
log = "0.4"
simplelog="0.8"

[target.'cfg(unix)'.dependencies]
nix = "0.17"

#[profile.release]
#debug=true